--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "author": "Oussema Amri",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
   },
-  "devDependencies": {},
   "homepage": ".",
   "browserslist": {
     "production": [
