changing api endpoint

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches: [ main ]  # or master, depending on your default branch name
+    branches: [ main ]  # or master, depending on your default branch
 
 jobs:
   deploy:
@@ -23,7 +23,8 @@ jobs:
     - name: Build
       run: npm run build
       env:
-        CI: false  # Prevents treating warnings as errors
+        CI: false
+        REACT_APP_API_URL: https://oussemaamri.com/api
 
     - name: Setup SSH
       run: |
@@ -32,14 +33,17 @@ jobs:
         chmod 600 ~/.ssh/ec2.key
         ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Fix permissions on EC2
-      run: |
-        ssh -i ~/.ssh/ec2.key ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "sudo chown -R ec2-user:ec2-user ~/Portfolio/build/"
-
     - name: Deploy to EC2
       run: |
         rsync -avz -e "ssh -i ~/.ssh/ec2.key" --delete ./build/ ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }}:~/Portfolio/build/
 
-    - name: Set permissions and restart Docker
+    - name: Deploy with Docker Compose
       run: |
-        ssh -i ~/.ssh/ec2.key ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "sudo chown -R nginx:nginx ~/Portfolio/build/ && cd ~/Portfolio && docker build -t portfolio-website:ssl . && docker stop portfolio || true && docker rm portfolio || true && docker run -d --name portfolio -p 80:80 -p 443:443 -v /etc/letsencrypt:/etc/letsencrypt:ro --restart=always portfolio-website:ssl"
+        ssh -i ~/.ssh/ec2.key ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "
+          # Update frontend files
+          sudo chown -R nginx:nginx ~/Portfolio/build/
+          
+          # Make sure Docker Compose is running latest version
+          export MONGODB_URI=\$(grep MONGODB_URI ~/portfolio-backend/.env | cut -d '=' -f2-)
+          cd ~ && docker-compose down && docker-compose up -d
+        "
