--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-toastify": "^9.1.3"
   },
   "homepage": ".",
   "browserslist": {
