--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "axios": "^1.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^9.1.3"
+    "react-scripts": "4.0.3"
   },
   "homepage": ".",
   "browserslist": {
