--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "axios": "^1.8.4",
     "react": "^17.0.2",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
   },
